--- a/Homepwner/Homepwner/HeaderView.xib
+++ b/Homepwner/Homepwner/HeaderView.xib
@@ -8,21 +8,22 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ItemViewController"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ZJh-yQ-qC5">
-            <rect key="frame" x="0.0" y="0.0" width="579" height="102"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H47-JY-cqN">
-                    <rect key="frame" x="106" y="36" width="30" height="30"/>
+                    <rect key="frame" x="49" y="20" width="30" height="30"/>
                     <state key="normal" title="Edit"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RWP-MU-D1j">
-                    <rect key="frame" x="426" y="36" width="31" height="30"/>
+                    <rect key="frame" x="232" y="20" width="31" height="30"/>
                     <state key="normal" title="New"/>
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="442.5" y="-71"/>
+            <point key="canvasLocation" x="465" y="3.5"/>
         </view>
     </objects>
 </document>
