--- a/Homepwner/Homepwner/HeaderView.xib
+++ b/Homepwner/Homepwner/HeaderView.xib
@@ -5,25 +5,41 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ItemViewController"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ItemViewController">
+            <connections>
+                <outlet property="headerView" destination="ZJh-yQ-qC5" id="Y1q-hL-6hV"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ZJh-yQ-qC5">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
+            <rect key="frame" x="0.0" y="0.0" width="442" height="73"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H47-JY-cqN">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H47-JY-cqN">
                     <rect key="frame" x="49" y="20" width="30" height="30"/>
                     <state key="normal" title="Edit"/>
+                    <connections>
+                        <action selector="toggleEditingMode:" destination="-1" eventType="touchUpInside" id="HfL-xd-G9C"/>
+                    </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RWP-MU-D1j">
-                    <rect key="frame" x="232" y="20" width="31" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RWP-MU-D1j">
+                    <rect key="frame" x="330" y="22" width="31" height="30"/>
                     <state key="normal" title="New"/>
+                    <connections>
+                        <action selector="addNewItem:" destination="-1" eventType="touchUpInside" id="EcD-la-gwy"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="RWP-MU-D1j" secondAttribute="trailing" constant="81" id="LUM-Ye-MfG"/>
+                <constraint firstItem="H47-JY-cqN" firstAttribute="top" secondItem="ZJh-yQ-qC5" secondAttribute="top" constant="20" id="LrR-Ed-en1"/>
+                <constraint firstItem="RWP-MU-D1j" firstAttribute="top" secondItem="ZJh-yQ-qC5" secondAttribute="top" constant="22" id="TQP-Dq-gCb"/>
+                <constraint firstItem="H47-JY-cqN" firstAttribute="leading" secondItem="ZJh-yQ-qC5" secondAttribute="leading" constant="49" id="ey6-td-xMV"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="465" y="3.5"/>
+            <point key="canvasLocation" x="526" y="3.5"/>
         </view>
     </objects>
 </document>
