--- a/Homepwner/Homepwner/DetailViewController.xib
+++ b/Homepwner/Homepwner/DetailViewController.xib
@@ -8,7 +8,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailViewController">
             <connections>
                 <outlet property="dateLabel" destination="Icn-Y9-55G" id="Mmc-Io-7dG"/>
-                <outlet property="imageView" destination="bxr-pc-7cd" id="NwP-mO-rOq"/>
                 <outlet property="nameField" destination="Bfa-dZ-xiM" id="Sm2-GZ-taD"/>
                 <outlet property="serialNumberField" destination="dHW-p7-e3H" id="FQZ-pa-7Sh"/>
                 <outlet property="toolbar" destination="hLy-z1-qFV" id="I69-XQ-f7z"/>
@@ -21,13 +20,17 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p9f-SO-Pdz">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p9f-SO-Pdz">
                     <rect key="frame" x="0.0" y="79" width="90" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="F3F-Jm-ndE"/>
+                        <constraint firstAttribute="width" constant="90" id="VAy-tF-8E9"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bfa-dZ-xiM">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bfa-dZ-xiM">
                     <rect key="frame" x="92" y="76" width="306" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -35,45 +38,62 @@
                         <outlet property="delegate" destination="-1" id="8jF-UE-1O9"/>
                     </connections>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Serial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssQ-3M-9Rj">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Serial" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ssQ-3M-9Rj">
                     <rect key="frame" x="0.0" y="117" width="90" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="N7o-ns-FE6"/>
+                        <constraint firstAttribute="width" constant="90" id="RNo-fq-Gca"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dHW-p7-e3H">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dHW-p7-e3H">
                     <rect key="frame" x="92" y="114" width="306" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="JDk-X1-1NC"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="hXm-n7-GvW"/>
                     </connections>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Value" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vjD-4t-bob">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vjD-4t-bob">
                     <rect key="frame" x="0.0" y="155" width="90" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="90" id="4OO-ng-boG"/>
+                        <constraint firstAttribute="height" constant="21" id="mbm-RN-WO2"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MJG-e5-S8B">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MJG-e5-S8B">
                     <rect key="frame" x="92" y="152" width="306" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="FcE-gc-Cve"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="fuz-IW-F8A"/>
                     </connections>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Icn-Y9-55G">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Icn-Y9-55G">
                     <rect key="frame" x="0.0" y="190" width="398" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="VMn-gQ-lZr"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bxr-pc-7cd">
-                    <rect key="frame" x="8" y="219" width="398" height="264"/>
-                </imageView>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-z1-qFV">
-                    <rect key="frame" x="0.0" y="495" width="414" height="44"/>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-z1-qFV">
+                    <rect key="frame" x="0.0" y="692" width="414" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="xLv-i6-v6A"/>
+                    </constraints>
                     <items>
                         <barButtonItem systemItem="camera" id="VWj-As-vZ4">
                             <connections>
@@ -84,6 +104,34 @@
                 </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="Bfa-dZ-xiM" secondAttribute="trailing" constant="16" id="5P1-in-DEX"/>
+                <constraint firstItem="ssQ-3M-9Rj" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="5bG-m6-oSK"/>
+                <constraint firstAttribute="trailing" secondItem="Icn-Y9-55G" secondAttribute="trailing" constant="16" id="6om-gI-VM4"/>
+                <constraint firstItem="Bfa-dZ-xiM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="76" id="6zL-g3-agz"/>
+                <constraint firstItem="vjD-4t-bob" firstAttribute="leading" secondItem="ssQ-3M-9Rj" secondAttribute="leading" id="EVy-hy-PX0"/>
+                <constraint firstItem="MJG-e5-S8B" firstAttribute="baseline" secondItem="vjD-4t-bob" secondAttribute="baseline" id="Ebp-Nj-qp0"/>
+                <constraint firstItem="MJG-e5-S8B" firstAttribute="top" secondItem="dHW-p7-e3H" secondAttribute="bottom" constant="8" id="IFZ-3d-UpP"/>
+                <constraint firstItem="Bfa-dZ-xiM" firstAttribute="baseline" secondItem="p9f-SO-Pdz" secondAttribute="baseline" id="LAd-9K-usO"/>
+                <constraint firstItem="p9f-SO-Pdz" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="79" id="NKt-TH-15j"/>
+                <constraint firstItem="Icn-Y9-55G" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Njz-BL-TYR"/>
+                <constraint firstItem="hLy-z1-qFV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="OVO-oc-6zS"/>
+                <constraint firstItem="Icn-Y9-55G" firstAttribute="top" secondItem="MJG-e5-S8B" secondAttribute="bottom" constant="8" id="S4X-mU-b3G"/>
+                <constraint firstItem="vjD-4t-bob" firstAttribute="top" secondItem="ssQ-3M-9Rj" secondAttribute="bottom" constant="17" id="SXW-qv-cMw"/>
+                <constraint firstAttribute="trailing" secondItem="hLy-z1-qFV" secondAttribute="trailing" id="VEi-xz-TRE"/>
+                <constraint firstItem="MJG-e5-S8B" firstAttribute="leading" secondItem="vjD-4t-bob" secondAttribute="trailing" constant="2" id="W2Y-pJ-f4j"/>
+                <constraint firstItem="p9f-SO-Pdz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="WrB-h8-Br2"/>
+                <constraint firstAttribute="trailing" secondItem="dHW-p7-e3H" secondAttribute="trailing" constant="16" id="YMM-W2-2cQ"/>
+                <constraint firstAttribute="trailing" secondItem="dHW-p7-e3H" secondAttribute="trailing" constant="16" id="cPT-LF-PoT"/>
+                <constraint firstItem="dHW-p7-e3H" firstAttribute="top" secondItem="Bfa-dZ-xiM" secondAttribute="bottom" constant="8" id="d90-wM-hK1"/>
+                <constraint firstAttribute="trailing" secondItem="MJG-e5-S8B" secondAttribute="trailing" constant="16" id="dXw-Zp-VT5"/>
+                <constraint firstItem="ssQ-3M-9Rj" firstAttribute="leading" secondItem="p9f-SO-Pdz" secondAttribute="leading" id="mt9-3R-lOV"/>
+                <constraint firstItem="Bfa-dZ-xiM" firstAttribute="leading" secondItem="p9f-SO-Pdz" secondAttribute="trailing" constant="2" id="nLh-fh-NQY"/>
+                <constraint firstItem="dHW-p7-e3H" firstAttribute="leading" secondItem="ssQ-3M-9Rj" secondAttribute="trailing" constant="2" id="pX9-y8-TZS"/>
+                <constraint firstItem="ssQ-3M-9Rj" firstAttribute="top" secondItem="p9f-SO-Pdz" secondAttribute="bottom" constant="17" id="qbf-a5-eY6"/>
+                <constraint firstItem="vjD-4t-bob" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rwT-nr-6VJ"/>
+                <constraint firstAttribute="bottom" secondItem="hLy-z1-qFV" secondAttribute="bottom" id="y19-yV-JVc"/>
+            </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
             <connections>
